--- a/app/admin/templates/admin/admin_header.html
+++ b/app/admin/templates/admin/admin_header.html
@@ -46,7 +46,7 @@
                 {% if not module.background_app %}
                 <li id="module_header_{{module.module_name}}" class="nav-item">
                     <a href="{{ url_for(module.module_link) }}" class="nav-link">
-                        <i class="nav-link-icon fa {{ module.module_icon }} {% if module.module_name == VDATA['module'].module_name %}icon-gradient bg-malibu-beach{% endif %}"> </i>
+                        <i class="nav-link-icon fa {{ module.module_icon }} {% if module.module_name == VDATA['module'].module_name %}icon-gradient bg-love-kiss{% endif %}"> </i>
                         {{ module.module_short_description }}
                     </a>
                 </li>
