--- a/prime_admin/templates/lms/client_view_modal.html
+++ b/prime_admin/templates/lms/client_view_modal.html
@@ -84,7 +84,12 @@
                         </div>
 
                         <div class="form-row">
-                            <div class="col-md-12 mb-3">
+                            <div class="col-md-3 mb-3">
+                                <label for="view_e_registration">E-Registration</label>
+                                <input style="font-weight: bold;" disabled type="text" class="form-control" id="view_e_registration" name="view_e_registration"
+                                    value="">
+                            </div>
+                            <div class="col-md-9 mb-3">
                                 <label for="view_address">Address</label>
                                 <input style="font-weight: bold;" disabled type="text" class="form-control" id="view_address" name="view_address"
                                     value="">
@@ -108,20 +113,26 @@
                                 <input style="font-weight: bold;" disabled type="text" class="form-control" id="view_book" name="view_book"
                                     value="">
                             </div>
-                            <div class="col-md-4 mb-3">
+                            <div class="col-md-4 mb-4">
                                 <label for="view_uniform">Uniform</label>
                                 <input style="font-weight: bold;" disabled type="text" class="form-control" id="view_uniform" name="view_uniform"
                                     value="">
                             </div>
+
                         </div>
 
                         <div class="form-row">
-                            <div class="col-md-6 mb-3">
+                            <div class="col-md-4 mb-3">
+                                <label for="view_id_materials">Others</label>
+                                <input style="font-weight: bold;" disabled type="text" class="form-control" id="view_id_materials" name="view_id_materials"
+                                    value="">
+                            </div>
+                            <div class="col-md-4 mb-3">
                                 <label for="view_amount">Amount</label>
                                 <input style="font-weight: bold;" disabled type="text" class="form-control" id="view_amount" name="view_amount"
                                     value="">
                             </div>
-                            <div class="col-md-6 mb-3">
+                            <div class="col-md-4 mb-3">
                                 <label for="view_balance">Balance</label>
                                 <input style="font-weight: bold;" disabled type="text" class="form-control" id="view_balance" name="view_balance"
                                     value="">
