--- a/prime_admin/templates/lms/members_table.html
+++ b/prime_admin/templates/lms/members_table.html
@@ -213,7 +213,7 @@
                         <label for="branch" class="">Branch</label>
                         <select name="branch" id="branch" class="form-control" required>
 
-                            {% if current_user.role_name == "Secretary" %}
+                            {% if current_user.role.name == "Secretary" %}
                             <!-- Pass -->
                             {% else %}
                             <option value="all">All</option>
